objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Anderson System</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Answered- in progress</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Kit Sent</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Bookkeeping</fullName>
        <description>For bookkeeping</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>No Response</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Waiting on Client</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Entity Formation</fullName>
        <description>Entity Formation</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Complete Final Call</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>No Response</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Reviewing Qs</fullName>
        </values>
        <values>
            <fullName>Sent to Fulfillment</fullName>
        </values>
        <values>
            <fullName>Waiting for Qs</fullName>
        </values>
        <values>
            <fullName>Waiting on Client</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Feedback</fullName>
        <description>Used for compliments or complaints.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Answered- in progress</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Internal</fullName>
        <description>For use with Internal Email-to-Case</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Operation Help desk</fullName>
        <description>Support Process for ops team</description>
        <isActive>true</isActive>
        <values>
            <fullName>Archived</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Validation</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Quarterly Follow Up</fullName>
        <description>List for Status of Quarterly Follow Up</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Salesforce Help Desk</fullName>
        <description>Support process for the Salesforce team</description>
        <isActive>true</isActive>
        <values>
            <fullName>Archived</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Validation</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Tax</fullName>
        <description>Tax</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Complete Final Call</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Initial Contact Made</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Waiting on Client</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AS_Cleanup_Box__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AS Cleanup Box</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Contact__c</fullName>
        <formula>If( AccountId != Contact.AccountId ,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account!=Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accounting_Coordinator__c</fullName>
        <formula>TEXT( Account.Accounting_Coordinators__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accounting Coordinator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Bookkeeping_Entities__c</fullName>
        <label>Additional Bookkeeping Entities</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Entity_Tax_Returns__c</fullName>
        <label>Additional Entity Tax Returns</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Advisor__c</fullName>
        <label>Advisor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Advisors</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Affiliate_Details__c</fullName>
        <description>Includes:Affiliate Name; Billing Address for Affiliate;Other Names the Affiliate is Known By;Type of Affiliate Relationship</description>
        <inlineHelpText>Includes:Affiliate Name; Billing Address for Affiliate;Other Names the Affiliate is Known By;Type of Affiliate Relationship</inlineHelpText>
        <label>Affiliate Details</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Age_Service__c</fullName>
        <formula>Date_to_Service__c - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age (Service)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>CASE(MOD( datevalue(CreatedDate)- DATE(1985,6,24),7), 

0 , CASE( MOD( ClosedDate - CreatedDate,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( ClosedDate - CreatedDate ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( ClosedDate - CreatedDate,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( ClosedDate - CreatedDate,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( ClosedDate - CreatedDate,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( ClosedDate - CreatedDate,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( ClosedDate - CreatedDate,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( ClosedDate - CreatedDate)/7)*5)</formula>
        <label>Days to Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Are_we_doing_your_personal_taxes__c</fullName>
        <label>Are we doing your personal taxes?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Maybe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_Paralegal_Deep_Prep__c</fullName>
        <label>Assigned Paralegal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Paralegals</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_Paralegal__c</fullName>
        <formula>Related_Entity__r.Processor__r.FirstName + &quot; &quot; + Related_Entity__r.Processor__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Paralegal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <label>Assigned To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mason Cadena</fullName>
                </value>
                <value>
                    <fullName>Janey Agustin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attorney_Assigned__c</fullName>
        <description>Attorney assigned to client case for putting together trusts.</description>
        <inlineHelpText>Attorney assigned to do trust work.</inlineHelpText>
        <label>Attorney Assigned</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Clint Coons</fullName>
                </value>
                <value>
                    <fullName>Greg Boots</fullName>
                </value>
                <value>
                    <fullName>Michael Bowman</fullName>
                </value>
                <value>
                    <fullName>Toby Mathis</fullName>
                </value>
                <value>
                    <fullName>Alex Hurt</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Lora Caindec</fullName>
                </value>
                <value>
                    <fullName>Josh Grimes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attorney__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attorney</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CaseAttorney</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BKG_Email_Conductor__c</fullName>
        <description>##Conga created btn:00bU000000163rJ
##Conga updated btn:00bU000000163rJ</description>
        <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;congaemailtemplateid=a0yU0000007qXdH&quot; + 
&quot;&amp;reportid=00OU0000003I7DU&quot; + 
&quot;&amp;emailfromid=0D2U0000002AGiq&quot; + 
&quot;&amp;emailsubject=Schedule a time with your Bookkeeper&quot; + 
&quot;&amp;ac0=1&quot; + 
&quot;&amp;ac1=Bookkeeping vCita Email.&quot; + 
&quot;&amp;qmode=SendEmail&quot;</formula>
        <label>BKG Email Conductor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_Tax_Package__c</fullName>
        <label>Bill to Tax Package</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Blueprint_Added_to_Box__c</fullName>
        <description>Day and time a Blueprint was added to Box</description>
        <label>Blueprint Added to Box</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Bookkeeper_Assigned__c</fullName>
        <inlineHelpText>Bookkeeper Assigned to Client</inlineHelpText>
        <label>Bookkeeper Assigned</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Blanca Lemus</fullName>
                </value>
                <value>
                    <fullName>Christos Zattas</fullName>
                </value>
                <value>
                    <fullName>Jennifer Phipps</fullName>
                </value>
                <value>
                    <fullName>Justin Claus</fullName>
                </value>
                <value>
                    <fullName>Maggie Khermandayan</fullName>
                </value>
                <value>
                    <fullName>Marie Galligan</fullName>
                    <label>Marie Pues</label>
                </value>
                <value>
                    <fullName>Mariel Garvin</fullName>
                </value>
                <value>
                    <fullName>Melissa Elias</fullName>
                </value>
                <value>
                    <fullName>Sara Winter</fullName>
                </value>
                <value>
                    <fullName>Goran Bozic</fullName>
                </value>
                <value>
                    <fullName>Heather Banner</fullName>
                </value>
                <value>
                    <fullName>Matthew Esses</fullName>
                </value>
                <value>
                    <fullName>Toy Quick</fullName>
                </value>
                <value>
                    <fullName>Natasha Waite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bookkeeper__c</fullName>
        <label>Bookkeeper</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Bookkeeping_Admin</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bookkeeping_Completed_By__c</fullName>
        <label>Bookkeeping Completed By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Anderson Bookkeeping Department</fullName>
                </value>
                <value>
                    <fullName>Contact me about your bookkeeping services</fullName>
                </value>
                <value>
                    <fullName>My Local Accountant</fullName>
                </value>
                <value>
                    <fullName>One of My Employees</fullName>
                </value>
                <value>
                    <fullName>Myself</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Box_Notes_Link__c</fullName>
        <label>Box Notes Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Bundle_Applied__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check to see if case already has package/bundle</description>
        <label>Bundle Applied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Value__c</fullName>
        <label>Business Value</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CAM__c</fullName>
        <formula>TEXT(Account.Assigned_CAM__c)</formula>
        <label>CAM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAMs__c</fullName>
        <label>CAMs</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CAM</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPA_Team_Assigned__c</fullName>
        <inlineHelpText>Tax Prep Team Assigned to Client</inlineHelpText>
        <label>Tax Team Assigned</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Jennifer Phipps</fullName>
                </value>
                <value>
                    <fullName>Ronnie Withaeger</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Lulu Mendiola</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSRs__c</fullName>
        <label>Client Success Coordinator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CSR</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CaseCommentDate__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>CaseCommentDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_Comment_Box__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Comment Box</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Comment_Public__c</fullName>
        <description>Timestamp for when a case comment was made public.</description>
        <inlineHelpText>Timestamp when Anderson employee publishes a case comment.</inlineHelpText>
        <label>Case Comment Public</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_Created_By_Me__c</fullName>
        <formula>IF(CreatedById = $User.Id , true, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Created By Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <description>VOD SR-2637: Create Round Robin Case Assignment Rule</description>
        <displayFormat>{0}</displayFormat>
        <label>RR Case Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Profile__c</fullName>
        <formula>Owner:User.Profile.Name</formula>
        <label>Case Owner Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Status__c</fullName>
        <formula>IF( Owner:User.IsActive = TRUE, &apos;Active&apos;, &apos;Inactive&apos;)</formula>
        <label>Case Owner Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner_is_Active__c</fullName>
        <formula>IF( 
AND(
Owner:User.IsActive = TRUE,
 BEGINS( TEXT(Account.Assigned_CSR__c), Owner:User.FirstName + &quot; &quot; + Owner:User.LastName) 
), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_creator_name_If_Sharing_Login__c</fullName>
        <label>Case creator name (If Sharing Login)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_owner_remove_Lex_for_report__c</fullName>
        <formula>Owner:User.FirstName  + &quot; &quot;+ SUBSTITUTE(Owner:User.LastName,&quot; (LEX)&quot; , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce Error</fullName>
                    <label>Salesforce</label>
                </value>
                <value>
                    <fullName>Web Page Error</fullName>
                    <label>Website</label>
                </value>
                <value>
                    <fullName>Blueprint / LucidChart</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Reports/Dashboards/Export</fullName>
                </value>
                <value>
                    <fullName>Conga</fullName>
                </value>
                <value>
                    <fullName>8x8</fullName>
                </value>
                <value>
                    <fullName>Box</fullName>
                </value>
                <value>
                    <fullName>DocuSign</fullName>
                </value>
                <value>
                    <fullName>Google</fullName>
                </value>
                <value>
                    <fullName>Groove</fullName>
                </value>
                <value>
                    <fullName>Lenovo/Windows</fullName>
                </value>
                <value>
                    <fullName>Windows</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Password Reset</fullName>
                </value>
                <value>
                    <fullName>Onboarding/Offboarding</fullName>
                </value>
                <value>
                    <fullName>Phone Line Ticket</fullName>
                </value>
                <value>
                    <fullName>--None--</fullName>
                    <isActive>false</isActive>
                    <label>--None--</label>
                </value>
                <value>
                    <fullName>Blueprint Software</fullName>
                    <isActive>false</isActive>
                    <label>Blueprint Software</label>
                </value>
                <value>
                    <fullName>Field Update</fullName>
                    <isActive>false</isActive>
                    <label>Field Update</label>
                </value>
                <value>
                    <fullName>Form Request</fullName>
                    <isActive>false</isActive>
                    <label>Form Request</label>
                </value>
                <value>
                    <fullName>Lead Upload</fullName>
                    <isActive>false</isActive>
                    <label>Lead Upload</label>
                </value>
                <value>
                    <fullName>List Views</fullName>
                    <isActive>false</isActive>
                    <label>List Views</label>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                    <isActive>false</isActive>
                    <label>Maintenance</label>
                </value>
                <value>
                    <fullName>Operations Other</fullName>
                    <isActive>false</isActive>
                    <label>Operations Other</label>
                </value>
                <value>
                    <fullName>Page Layout Change</fullName>
                    <isActive>false</isActive>
                    <label>Page Layout Change</label>
                </value>
                <value>
                    <fullName>Purchase Request</fullName>
                    <isActive>false</isActive>
                    <label>Purchase Request</label>
                </value>
                <value>
                    <fullName>Salesforce Other</fullName>
                    <isActive>false</isActive>
                    <label>Salesforce Other</label>
                </value>
                <value>
                    <fullName>Technical Support</fullName>
                    <isActive>false</isActive>
                    <label>Technical Support</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_E_Mail__c</fullName>
        <label>Client E-Mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Client_Phone__c</fullName>
        <label>Client Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Client_Statement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Statement</label>
        <referenceTo>Client_Statement__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Status__c</fullName>
        <description>Status of client, to be used by Advisors doing nurture phone calls.</description>
        <inlineHelpText>Status of client, to be used by Advisors doing nurture phone calls.</inlineHelpText>
        <label>Client Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active - Platinum</fullName>
                </value>
                <value>
                    <fullName>Active - Non-Platinum</fullName>
                </value>
                <value>
                    <fullName>Non-Active</fullName>
                </value>
                <value>
                    <fullName>Opted Out of Nurture Calls</fullName>
                </value>
                <value>
                    <fullName>Do Not Call At All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closed_By__c</fullName>
        <label>Closed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Won_Date__c</fullName>
        <description>The last transaction date if the sale is in closed won.</description>
        <formula>IF( TEXT(Sales__r.StageName) = &apos;Closed Won&apos;,  Sales__r.Last_Transaction__c , NULL)</formula>
        <label>Closed Won Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Compare_current_user_and_community_user__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Compare current user and community user</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Complexity_Score__c</fullName>
        <label>Complexity Score</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confidence__c</fullName>
        <description>How confident are we about the optimistic estimates for reach, impact, and effort?

High confidence — 100%
Medium confidence — 80%
Low confidence — 50%
Moonshot — 20% or less</description>
        <inlineHelpText>How confident are we about the optimistic estimates for reach, impact, and effort?

High confidence — 100%
Medium confidence — 80%
Low confidence — 50%
Moonshot — 20% or less</inlineHelpText>
        <label>Confidence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Critical_Cases__c</fullName>
        <label>Critical Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Origin__c</fullName>
        <label>Origin</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DateOpened__c</fullName>
        <formula>DATEVALUE(CreatedDate)</formula>
        <label>DateOpened</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Answered__c</fullName>
        <description>This is the date the question was answered.</description>
        <inlineHelpText>Enter the date the question was answered in this field.</inlineHelpText>
        <label>Date Answered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Checker__c</fullName>
        <description>Checks to see if task was created on Friday / Weekend. Used for escalation reporting.</description>
        <formula>IF(AND(
    DATEVALUE(CreatedDate) -  DATEVALUE( NOW()) &lt;= 3,
    MOD(DATEVALUE( NOW()  )- DATE (1900, 1, 7), 7) = 1,
        OR(
            MOD(DATEVALUE( CreatedDate  )- DATE (1900, 1, 7), 7) = 5,
            MOD(DATEVALUE( CreatedDate  )- DATE (1900, 1, 7), 7) = 0,
            MOD(DATEVALUE( CreatedDate )- DATE (1900, 1, 7), 7) = 6)
    ), FALSE, TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date Mod</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_to_Service__c</fullName>
        <label>Date to Service</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Activty__c</fullName>
        <formula>CASE(MOD(Account.LastActivityDate - DATE(1985,6,24),7), 
0 , CASE( MOD( today()-Account.LastActivityDate ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( today()-Account.LastActivityDate ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( today()-Account.LastActivityDate ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( today()-Account.LastActivityDate ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( today()-Account.LastActivityDate ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( today()-Account.LastActivityDate ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( today()-Account.LastActivityDate ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( today()-Account.LastActivityDate )/7)*5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Activty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advisors</fullName>
                </value>
                <value>
                    <fullName>Advisor Admins</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Mailroom</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Pensions</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Professional Advisors</fullName>
                </value>
                <value>
                    <fullName>Renewals</fullName>
                </value>
                <value>
                    <fullName>Tax</fullName>
                </value>
                <value>
                    <fullName>Bookkeeping</fullName>
                </value>
                <value>
                    <fullName>BCP</fullName>
                </value>
                <value>
                    <fullName>Estate Planning</fullName>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description_Mirror__c</fullName>
        <label>Description Mirror</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>